--- a/data.ipynb
+++ b/data.ipynb
@@ -216,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28750000\n"
+      "495772\n"
      ]
     },
     {
@@ -260,25 +260,25 @@
        "      <td>2.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>08-02-2022</td>\n",
        "      <td>0.8</td>\n",
        "      <td>2.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>08-02-2022</td>\n",
        "      <td>0.8</td>\n",
        "      <td>2.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>3</th>\n",
        "      <td>08-02-2022</td>\n",
        "      <td>0.8</td>\n",
        "      <td>2.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>4</th>\n",
        "      <td>08-02-2022</td>\n",
        "      <td>0.8</td>\n",
        "      <td>2.9</td>\n",
@@ -290,10 +290,10 @@
       "text/plain": [
        "         Date  Price min  Price max\n",
        "0  08-02-2022        0.8        2.9\n",
-       "0  08-02-2022        0.8        2.9\n",
-       "0  08-02-2022        0.8        2.9\n",
-       "0  08-02-2022        0.8        2.9\n",
-       "0  08-02-2022        0.8        2.9"
+       "1  08-02-2022        0.8        2.9\n",
+       "2  08-02-2022        0.8        2.9\n",
+       "3  08-02-2022        0.8        2.9\n",
+       "4  08-02-2022        0.8        2.9"
       ]
      },
      "metadata": {},
@@ -307,12 +307,12 @@
     "df = df.loc[df.index.repeat(50)]\n",
     "print(len(df))\n",
     "display(df.head())\n",
-    "# df.to_csv('raw_data/004_apple.csv', index=False)"
+    "df.to_csv('raw_data/004_apple.csv', index=False, sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -322,10 +322,10 @@
       "7650\n",
       "  Date;Price min;Price max\n",
       "0       11-10-2021;0.0;0.0\n",
-      "0       11-10-2021;0.0;0.0\n",
-      "0       11-10-2021;0.0;0.0\n",
-      "0       11-10-2021;0.0;0.0\n",
-      "0       11-10-2021;0.0;0.0\n"
+      "1       11-10-2021;0.0;0.0\n",
+      "2       11-10-2021;0.0;0.0\n",
+      "3       11-10-2021;0.0;0.0\n",
+      "4       11-10-2021;0.0;0.0\n"
      ]
     }
    ],
@@ -336,12 +336,12 @@
     "df = df.loc[df.index.repeat(50)]\n",
     "print(len(df))\n",
     "print(df.head())\n",
-    "df.to_csv('raw_data/004_apricot.csv', index=False)"
+    "df.to_csv('raw_data/004_apricot.csv', index=False, sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -351,10 +351,10 @@
       "5800\n",
       "  Date;Price min;Price max\n",
       "0       28-02-2022;2.0;2.6\n",
-      "0       28-02-2022;2.0;2.6\n",
-      "0       28-02-2022;2.0;2.6\n",
-      "0       28-02-2022;2.0;2.6\n",
-      "0       28-02-2022;2.0;2.6\n"
+      "1       28-02-2022;2.0;2.6\n",
+      "2       28-02-2022;2.0;2.6\n",
+      "3       28-02-2022;2.0;2.6\n",
+      "4       28-02-2022;2.0;2.6\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
     "df = df.loc[df.index.repeat(100)]\n",
     "print(len(df))\n",
     "print(df.head())\n",
-    "df.to_csv('raw_data/004_banana.csv', index=False)"
+    "df.to_csv('raw_data/004_banana.csv', index=False, sep=',')"
    ]
   },
   {
