--- a/data.ipynb
+++ b/data.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -320,19 +320,19 @@
      "output_type": "stream",
      "text": [
       "7650\n",
-      "  Date;Price min;Price max\n",
-      "0       11-10-2021;0.0;0.0\n",
-      "1       11-10-2021;0.0;0.0\n",
-      "2       11-10-2021;0.0;0.0\n",
-      "3       11-10-2021;0.0;0.0\n",
-      "4       11-10-2021;0.0;0.0\n"
+      "         Date  Price min  Price max\n",
+      "0  11-10-2021        0.0        0.0\n",
+      "1  11-10-2021        0.0        0.0\n",
+      "2  11-10-2021        0.0        0.0\n",
+      "3  11-10-2021        0.0        0.0\n",
+      "4  11-10-2021        0.0        0.0\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.read_csv('raw_data/004_apricot.csv')\n",
+    "df = pd.read_csv('raw_data/004_apricot.csv', sep=';')\n",
     "df = df.loc[df.index.repeat(50)]\n",
     "print(len(df))\n",
     "print(df.head())\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -349,19 +349,19 @@
      "output_type": "stream",
      "text": [
       "5800\n",
-      "  Date;Price min;Price max\n",
-      "0       28-02-2022;2.0;2.6\n",
-      "1       28-02-2022;2.0;2.6\n",
-      "2       28-02-2022;2.0;2.6\n",
-      "3       28-02-2022;2.0;2.6\n",
-      "4       28-02-2022;2.0;2.6\n"
+      "         Date  Price min  Price max\n",
+      "0  28-02-2022        2.0        2.6\n",
+      "1  28-02-2022        2.0        2.6\n",
+      "2  28-02-2022        2.0        2.6\n",
+      "3  28-02-2022        2.0        2.6\n",
+      "4  28-02-2022        2.0        2.6\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.read_csv('raw_data/004_banana.csv')\n",
+    "df = pd.read_csv('raw_data/004_banana.csv', sep=';')\n",
     "df = df.loc[df.index.repeat(100)]\n",
     "print(len(df))\n",
     "print(df.head())\n",
