--- a/data.ipynb
+++ b/data.ipynb
@@ -370,15 +370,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def split_by_location(df):\n",
+    "    \"\"\"\n",
+    "    Split a dataframe into multiple dataframes based on unique combinations of\n",
+    "    Region, Country, State, and City.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    df : pandas.DataFrame\n",
+    "        Input dataframe with columns: Region, Country, State, City, Month, Day, Year, AvgTemperature\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    dict\n",
+    "        Dictionary where keys are tuples of (Region, Country, State, City)\n",
+    "        and values are corresponding dataframes\n",
+    "    \"\"\"\n",
+    "    # Group by location columns\n",
+    "    location_cols = ['Region', 'Country', 'State'] # dropping most outside america\n",
+    "    \n",
+    "    # Create a dictionary to store the split dataframes\n",
+    "    split_dfs = {}\n",
+    "    \n",
+    "    # Get unique combinations of location columns\n",
+    "    unique_locations = df[location_cols].drop_duplicates()\n",
+    "    \n",
+    "    # Split the dataframe for each unique location\n",
+    "    for _, location in unique_locations.iterrows():\n",
+    "        # Create the filter condition\n",
+    "        condition = True\n",
+    "        for col in location_cols:\n",
+    "            condition = condition & (df[col] == location[col])\n",
+    "            \n",
+    "        # Create the key tuple\n",
+    "        location_key = tuple(location[location_cols])\n",
+    "        \n",
+    "        # drop if all Empty Dataframe\n",
+    "        if df[condition].empty:\n",
+    "            print(f\"Empty Dataframe for {location_key}\")\n",
+    "            continue\n",
+    "\n",
+    "        # Store the filtered dataframe\n",
+    "        split_dfs[location_key] = df[condition].copy()\n",
+    "        \n",
+    "        # Sort by date if needed\n",
+    "        split_dfs[location_key].sort_values(['Year', 'Month', 'Day'], inplace=True)\n",
+    "        \n",
+    "        # Reset index\n",
+    "        split_dfs[location_key].reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    return split_dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8v/kyhpjx6d3y1b7dp0twz_83sw0000gn/T/ipykernel_36683/2924597830.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/8v/kyhpjx6d3y1b7dp0twz_83sw0000gn/T/ipykernel_73813/3480003844.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('raw_data/city_temperature.csv')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty Dataframe for ('Africa', 'Algeria', nan)\n",
+      "Empty Dataframe for ('Africa', 'Burundi', nan)\n",
+      "Empty Dataframe for ('Africa', 'Benin', nan)\n",
+      "Empty Dataframe for ('Africa', 'Central African Republic', nan)\n",
+      "Empty Dataframe for ('Africa', 'Congo', nan)\n",
+      "Empty Dataframe for ('Africa', 'Egypt', nan)\n",
+      "Empty Dataframe for ('Africa', 'Ethiopia', nan)\n",
+      "Empty Dataframe for ('Africa', 'Gabon', nan)\n",
+      "Empty Dataframe for ('Africa', 'Gambia', nan)\n",
+      "Empty Dataframe for ('Africa', 'Guinea', nan)\n",
+      "Empty Dataframe for ('Africa', 'Guinea-Bissau', nan)\n",
+      "Empty Dataframe for ('Africa', 'Ivory Coast', nan)\n",
+      "Empty Dataframe for ('Africa', 'Kenya', nan)\n",
+      "Empty Dataframe for ('Africa', 'Morocco', nan)\n",
+      "Empty Dataframe for ('Africa', 'Madagascar', nan)\n",
+      "Empty Dataframe for ('Africa', 'Mauritania', nan)\n",
+      "Empty Dataframe for ('Africa', 'Malawi', nan)\n",
+      "Empty Dataframe for ('Africa', 'Mozambique', nan)\n",
+      "Empty Dataframe for ('Africa', 'Namibia', nan)\n",
+      "Empty Dataframe for ('Africa', 'Nigeria', nan)\n",
+      "Empty Dataframe for ('Africa', 'Senegal', nan)\n",
+      "Empty Dataframe for ('Africa', 'Sierra Leone', nan)\n",
+      "Empty Dataframe for ('Africa', 'South Africa', nan)\n",
+      "Empty Dataframe for ('Africa', 'Togo', nan)\n",
+      "Empty Dataframe for ('Africa', 'Tunisia', nan)\n",
+      "Empty Dataframe for ('Africa', 'Tanzania', nan)\n",
+      "Empty Dataframe for ('Africa', 'Uganda', nan)\n",
+      "Empty Dataframe for ('Africa', 'Zambia', nan)\n",
+      "Empty Dataframe for ('Asia', 'Bangladesh', nan)\n",
+      "Empty Dataframe for ('Asia', 'China', nan)\n",
+      "Empty Dataframe for ('Asia', 'Hong Kong', nan)\n",
+      "Empty Dataframe for ('Asia', 'India', nan)\n",
+      "Empty Dataframe for ('Asia', 'Indonesia', nan)\n",
+      "Empty Dataframe for ('Asia', 'Japan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Kazakhstan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Kyrgyzstan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Laos', nan)\n",
+      "Empty Dataframe for ('Asia', 'Malaysia', nan)\n",
+      "Empty Dataframe for ('Asia', 'Mongolia', nan)\n",
+      "Empty Dataframe for ('Asia', 'Myanmar (Burma)', nan)\n",
+      "Empty Dataframe for ('Asia', 'Nepal', nan)\n",
+      "Empty Dataframe for ('Asia', 'North Korea', nan)\n",
+      "Empty Dataframe for ('Asia', 'Pakistan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Philippines', nan)\n",
+      "Empty Dataframe for ('Asia', 'Singapore', nan)\n",
+      "Empty Dataframe for ('Asia', 'South Korea', nan)\n",
+      "Empty Dataframe for ('Asia', 'Sri Lanka', nan)\n",
+      "Empty Dataframe for ('Asia', 'Taiwan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Tajikistan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Thailand', nan)\n",
+      "Empty Dataframe for ('Asia', 'Turkmenistan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Uzbekistan', nan)\n",
+      "Empty Dataframe for ('Asia', 'Vietnam', nan)\n",
+      "Empty Dataframe for ('Australia/South Pacific', 'Australia', nan)\n",
+      "Empty Dataframe for ('Australia/South Pacific', 'New Zealand', nan)\n",
+      "Empty Dataframe for ('Europe', 'Albania', nan)\n",
+      "Empty Dataframe for ('Europe', 'Austria', nan)\n",
+      "Empty Dataframe for ('Europe', 'Belarus', nan)\n",
+      "Empty Dataframe for ('Europe', 'Belgium', nan)\n",
+      "Empty Dataframe for ('Europe', 'Bulgaria', nan)\n",
+      "Empty Dataframe for ('Europe', 'Croatia', nan)\n",
+      "Empty Dataframe for ('Europe', 'Cyprus', nan)\n",
+      "Empty Dataframe for ('Europe', 'Czech Republic', nan)\n",
+      "Empty Dataframe for ('Europe', 'Denmark', nan)\n",
+      "Empty Dataframe for ('Europe', 'Finland', nan)\n",
+      "Empty Dataframe for ('Europe', 'France', nan)\n",
+      "Empty Dataframe for ('Europe', 'Germany', nan)\n",
+      "Empty Dataframe for ('Europe', 'Georgia', nan)\n",
+      "Empty Dataframe for ('Europe', 'Greece', nan)\n",
+      "Empty Dataframe for ('Europe', 'Hungary', nan)\n",
+      "Empty Dataframe for ('Europe', 'Iceland', nan)\n",
+      "Empty Dataframe for ('Europe', 'Ireland', nan)\n",
+      "Empty Dataframe for ('Europe', 'Italy', nan)\n",
+      "Empty Dataframe for ('Europe', 'Latvia', nan)\n",
+      "Empty Dataframe for ('Europe', 'Macedonia', nan)\n",
+      "Empty Dataframe for ('Europe', 'The Netherlands', nan)\n",
+      "Empty Dataframe for ('Europe', 'Norway', nan)\n",
+      "Empty Dataframe for ('Europe', 'Poland', nan)\n",
+      "Empty Dataframe for ('Europe', 'Portugal', nan)\n",
+      "Empty Dataframe for ('Europe', 'Romania', nan)\n",
+      "Empty Dataframe for ('Europe', 'Russia', nan)\n",
+      "Empty Dataframe for ('Europe', 'Serbia-Montenegro', nan)\n",
+      "Empty Dataframe for ('Europe', 'Slovakia', nan)\n",
+      "Empty Dataframe for ('Europe', 'Spain', nan)\n",
+      "Empty Dataframe for ('Europe', 'Sweden', nan)\n",
+      "Empty Dataframe for ('Europe', 'Switzerland', nan)\n",
+      "Empty Dataframe for ('Europe', 'Ukraine', nan)\n",
+      "Empty Dataframe for ('Europe', 'United Kingdom', nan)\n",
+      "Empty Dataframe for ('Europe', 'Yugoslavia', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Bahrain', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Israel', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Jordan', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Kuwait', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Lebanon', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Oman', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Qatar', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Saudi Arabia', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Syria', nan)\n",
+      "Empty Dataframe for ('Middle East', 'Turkey', nan)\n",
+      "Empty Dataframe for ('Middle East', 'United Arab Emirates', nan)\n",
+      "Empty Dataframe for ('North America', 'Canada', nan)\n",
+      "Empty Dataframe for ('North America', 'Mexico', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Argentina', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Bahamas', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Bermuda', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Belize', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Bolivia', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Barbados', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Brazil', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Colombia', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Costa Rica', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Cuba', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Dominican Republic', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Equador', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Guatemala', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Guyana', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Haiti', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Honduras', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Nicaragua', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Panama', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Peru', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Suriname', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Uruguay', nan)\n",
+      "Empty Dataframe for ('South/Central America & Carribean', 'Venezuela', nan)\n",
+      "52\n"
      ]
     },
     {
@@ -402,41 +593,171 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>State</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Year</th>\n",
        "      <th>AvgTemperature</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>64.2</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>50.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>49.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Huntsville</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
        "      <td>48.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>59.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>46.4</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>55.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>47.9</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>37.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37055</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>64.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37056</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>64.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37057</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Huntsville</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>57.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37058</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>64.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37059</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>63.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>37060 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   AvgTemperature\n",
-       "0            64.2\n",
-       "1            49.4\n",
-       "2            48.8\n",
-       "3            46.4\n",
-       "4            47.9"
+       "              Region Country    State        City  Month  Day  Year  \\\n",
+       "0      North America      US  Alabama  Birmingham      1    1  1995   \n",
+       "1      North America      US  Alabama  Huntsville      1    1  1995   \n",
+       "2      North America      US  Alabama      Mobile      1    1  1995   \n",
+       "3      North America      US  Alabama  Montgomery      1    1  1995   \n",
+       "4      North America      US  Alabama  Birmingham      1    2  1995   \n",
+       "...              ...     ...      ...         ...    ...  ...   ...   \n",
+       "37055  North America      US  Alabama  Montgomery      5   12  2020   \n",
+       "37056  North America      US  Alabama  Birmingham      5   13  2020   \n",
+       "37057  North America      US  Alabama  Huntsville      5   13  2020   \n",
+       "37058  North America      US  Alabama      Mobile      5   13  2020   \n",
+       "37059  North America      US  Alabama  Montgomery      5   13  2020   \n",
+       "\n",
+       "       AvgTemperature  \n",
+       "0                50.7  \n",
+       "1                48.8  \n",
+       "2                59.3  \n",
+       "3                55.5  \n",
+       "4                37.2  \n",
+       "...               ...  \n",
+       "37055            64.1  \n",
+       "37056            64.7  \n",
+       "37057            57.5  \n",
+       "37058            64.2  \n",
+       "37059            63.6  \n",
+       "\n",
+       "[37060 rows x 8 columns]"
       ]
      },
      "metadata": {},
@@ -550,10 +871,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "df = pd.read_csv('raw_data/city_temperature.csv')\n",
-    "# remove all but avgTemp\n",
-    "df_temp = df[['AvgTemperature']]\n",
-    "display(df_temp.head())\n",
-    "df_temp.to_csv('raw_data/004_city-temperature.csv', index=False)\n",
+    "df_dict = split_by_location(df)\n",
+    "print(len(df_dict))\n",
+    "display(df_dict[list(df_dict.keys())[0]])\n",
+    "for key in df_dict[:10]: # dont need too mnay files\n",
+    "    df_dict[key].to_csv(f\"raw_data/004_city-temperature-{'-'.join(key)}.csv\", index=False, header=True)\n",
+    "# df_temp.to_csv('raw_data/004_city-temperature.csv', index=False)\n",
     "\n",
     "df.to_csv('raw_data/005_city-temperature.csv', index=False)\n",
     "display(df.head())"
