--- a/data.ipynb
+++ b/data.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,15 +430,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8v/kyhpjx6d3y1b7dp0twz_83sw0000gn/T/ipykernel_73813/3480003844.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('raw_data/city_temperature.csv')\n"
+      "/apps/cent7/jupyterhub/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (2) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     },
     {
@@ -874,8 +874,10 @@
     "df_dict = split_by_location(df)\n",
     "print(len(df_dict))\n",
     "display(df_dict[list(df_dict.keys())[0]])\n",
-    "for key in df_dict[:10]: # dont need too mnay files\n",
+    "for i, key in enumerate(df_dict): # dont need too mnay files\n",
     "    df_dict[key].to_csv(f\"raw_data/004_city-temperature-{'-'.join(key)}.csv\", index=False, header=True)\n",
+    "    if i > 10:\n",
+    "        break\n",
     "# df_temp.to_csv('raw_data/004_city-temperature.csv', index=False)\n",
     "\n",
     "df.to_csv('raw_data/005_city-temperature.csv', index=False)\n",
@@ -942,7 +944,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "its530_py38",
+   "display_name": "Python 3.9 (Default)",
    "language": "python",
    "name": "python3"
   },
@@ -956,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
